test_data/typeerror/pandas-24572.py
if truncate_h:
    row.insert(row_levels - sparse_offset +
                self.fmt.tr_col_num, '...')
